--- a/WFGeradorArquivoDDD/WFGeradorArquivoDDD.csproj
+++ b/WFGeradorArquivoDDD/WFGeradorArquivoDDD.csproj
@@ -79,6 +79,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GeradorArquivoDDD.Dominio\GeradorArquivoDDD.Dominio.csproj">
+      <Project>{2cf681e4-d687-4cdb-b3a7-77bdd38bde80}</Project>
+      <Name>GeradorArquivoDDD.Dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
